--- a/Angular/eBarter/src/app/components/list-item/list-item.component.css
+++ b/Angular/eBarter/src/app/components/list-item/list-item.component.css
@@ -1,21 +1,23 @@
-#form{
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  width: 400px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   text-align: center;
-  margin-left: 600px;
-}
-#itemname{
-  margin-left: 30%;
-  margin-right: 30%;
-}
-#desc{
-  margin-left: 30%;
-  margin-right: 30%;
-}
-#image{
-  margin-left: 30%;
-  margin-right: 30%;
-}
-#sub{
-  margin-left: 30%;
-  margin-right: 30%;
 }
 
+
+#showOffersForItemsThisUserHasWon{
+  text-align: center;
+
+}
