--- a/Angular/eBarter/src/app/components/homepage/homepage.component.css
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.css
@@ -37,6 +37,12 @@
   border-top-left-radius: calc(0.25rem - 1px);
   border-top-right-radius: calc(0.25rem - 1px);
 }
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  text-align: -webkit-center;
+}
 /* .card-deck[_ngcontent-c2] .card[_ngcontent-c2] {
   display: -webkit-box;
   flex: 1 0 0%;
