--- a/Angular/eBarter/src/app/components/homepage/homepage.component.html
+++ b/Angular/eBarter/src/app/components/homepage/homepage.component.html
@@ -33,10 +33,10 @@
             <div class="card">
               <div class="card-body">
                 <br>
-                <a>{{item.name}}</a>
+                <p>{{item.name}}</p>
                 <hr>
                 <br>
-                <a>{{item.description}}</a>
+                <p>{{item.description}}</p>
               </div>
             </div>
           </div>
